--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
 
 <style> 
 
-  background: #9A8C98
-  
+ body {
+  font-family: system-ui;
+  background: #e3d5ca;
+  color: white;
+  text-align: center;
+}
+h2 { 
+  color: #588157;
+  text-align: center;
+  text-shadow: 2px 2px 5px lightblue;
+  font-size: 30px;
+  }
+
+h5 {
+  color: #9090AF;
+  text-align: center;
+  font-size: 20px;
+}
+img {
+  width: 550px;
+}
+img:hover {
+  border: dashed blue 5px;
+  border-radius: 35%;
+}
   
 </style>
