--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
  body {
   font-family: system-ui;
-  background: #e3d5ca;
-  color: white;
+  background: #C7BFCB;
+  color: grey;
   text-align: center;
 }
 h2 { 
