--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
 
 <style> 
 
- body {
-  font-family: system-ui;
-  background: #C7BFCB;
-  color: #8F8F8F;
-  text-align: center;
-}
 h2 { 
   color: #588157;
   text-align: center;
   text-shadow: 2px 2px 5px lightblue;
-  font-size: 50px;
+  font-size: 30px;
   }
 
 h5 {
@@ -35,6 +29,28 @@ img {
 img:hover {
   border: dashed blue 5px;
   border-radius: 35%;
+}
+
+
+nav{
+  list-style-type: none;
+  background: lightblue;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding: 9px;
+}
+
+a{
+  color: white;
+  text-decorations: none;
+}
+
+li{
+  display: inline;
+  padding: 10px;
+  float: center;
 }
   
 </style>
