--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
 
 <style> 
 
- h2 { 
+ body {
+  font-family: system-ui;
+  background: #e3d5ca;
+  color: white;
+  text-align: center;
+}
+h2 { 
   color: #588157;
   text-align: center;
   text-shadow: 2px 2px 5px lightblue;
