--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,12 @@
 
-
+<link rel = "stylesheet" href = "style.css">
 <title> APPS </title>
 </head>
 <body>
    <center>
    <nav> 
     <li> <a href = "index.html"> HOME </a>   </li>
-    <li> <a href = "secondpage.html"> APPS </a>  </li>
+    <li> <a class = "active" href = "secondpage.html"> APPS </a>  </li>
     <li> <a href = "https://www.westviewasb.com/clubs"> WESTVIEW CLUBS </a> </li>
   </nav> 
   <!--------------------------------Heading-------------------------------->
