added image style

--- a/index.html
+++ b/index.html
@@ -25,4 +25,15 @@
 </html>
 </html>
 
+<style> 
+  
+  img {
+  width: 550px;
+}
+img:hover {
+  border: dashed blue 5px;
+  border-radius: 35%;
+}
+</style>
+
 
