--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <li> <a class = "active" href = "index.html"> HOME </a>   </li>
     <li> <a href = "page2.html"> APPS </a>  </li>
     <li> <a href = "https://www.westviewasb.com/clubs"> WESTVIEW CLUBS </a> </li>
+    
+    /* Set the width of the side navigation to 250px and the left margin of the page content to 250px and add a black background color to body */
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+  document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+}
+
+/* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft = "0";
+  document.body.style.backgroundColor = "white";
+}
   </nav>
   <!--------------------------------Heading-------------------------------->
   <br>
